--- a/game1.html
+++ b/game1.html
@@ -5,19 +5,52 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Juego de Arrastrar y Soltar</title>
 <link rel="stylesheet" href="css/game1.css">
+<style>
+  #cajasoltar1,#cajasoltar2,#cajasoltar3{
+    float: left;
+    width: 500px;
+    height: 500px;
+    margin: 10px;
+    border: 1px solid #999999;
+    background-color: rgb(252, 0, 0);
+   }
+   #cajaimagenes{
+    float: left;
+    width: 500px;
+    height: 500px;
+    margin: 10px;
+    border: 1px solid #999999;
+    background-color: rgb(0, 68, 255);
+   }
+   #cajaimagenes > img{
+    float: right;
+    padding: 5px;
+   }
+</style>
 </head>
 <body>
-<div id="pantalla1" class="pantalla">
-  <h2>Pantalla 1</h2>
-  <div id="animalitos1" class="animalitos"></div>
-  <div id="casas1" class="casas"></div>
-</div>
+  <section id="cajasoltar1">
+    <!-- <canvas id="lienzo1" width="500" height="500"></canvas> -->
+   </section>
+   <section id="cajasoltar2">
+    <!-- <canvas id="lienzo2" width="500" height="500"></canvas> -->
+   </section>
+   <section id="cajasoltar3">
+    <!-- <canvas id="lienzo3" width="500" height="500"></canvas>  -->
+   </section>
 
-<div id="pantalla2" class="pantalla">
+   <section id="cajaimagenes" >
+    <!-- <img id="imagen1" src="media/Antilope.png">
+    <img id="imagen2" src="media/Avestruz.png">
+    <img id="imagen3" src="media/monster3.gif">
+    <img id="imagen4" src="media/monster4.gif">  -->
+   </section>
+
+<!-- <div id="pantalla2" class="pantalla">
   <h2>Pantalla 2</h2>
   <div id="animalitos2" class="animalitos"></div>
   <div id="casas2" class="casas"></div>
-</div>
+</div> -->
 
 <script src="js/game1.js"></script>
 </body>
