--- a/creditos.html
+++ b/creditos.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Créditos y Autores</title>
     <link rel="stylesheet" href="css/creditos.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins:400,500,600,700&display=swap">
 </head>
 <body>
     <div id="container">
@@ -28,6 +29,7 @@
             <p><strong>Fecha:</strong> 10 de marzo de 2024</p>
             <p><strong>Ciudad:</strong> Aguascalientes, Aguascalientes, México</p>
         </div>
+        
     </div>
     <img src="media/hipopotamo.png" alt="" class="bottom-left-image">
     <img src="media/tucan.png" alt="" class="top-right-image">
