Ya quedo muchooooo del codigo, pero muchisimo

--- a/game1.html
+++ b/game1.html
@@ -66,6 +66,7 @@
       <button id="cont3" onclick="gameover3()">TERMINAR</button>
     </div>
 
+    <button onclick="comeback()">Salir</button>
 <script src="js/game1.js"></script>
 </body>
 </html>
