--- a/Recompensa.html
+++ b/Recompensa.html
@@ -13,6 +13,7 @@
         </div>
         <div class="button-container">
             <button id="regresarButton">◀ Regresar</button>
+            <button id="newGame">Iniciar Nuevo Juego</button>
             <button id="verReportesButton">Ver Todos los Reportes ▶</button>
         </div>
     </div>
