--- a/Index.html
+++ b/Index.html
@@ -162,8 +162,11 @@
             <img id="options"  class="animate__animated  animate__swing animate__delay-1s "  src="./media/OptionsDefaults.png" alt="">
             <div id="opt">
                 <a href="alias.html" onclick="opt(1)" onmouseout="resetOpt()">Jugar</a>
-                <a href="..." onmouseover="opt(2)" onmouseout="resetOpt()" >Leaderboard</a>
-                <a href="..." onmouseover="opt(3)" onmouseout="resetOpt()" >About</a>
+                <a href="creditos.html" onmouseover="opt(2)" onmouseout="resetOpt()" >Creditos</a>
+                <a href="reportes.html" onmouseover="opt(3)" onmouseout="resetOpt()" >Leaderboard</a>
+
+                
+
             </div>
         </div>
        </div>
