--- a/game1.html
+++ b/game1.html
@@ -5,10 +5,20 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Juego de Arrastrar y Soltar</title>
 <link rel="stylesheet" href="css/game1.css">
+<link rel="stylesheet" href="css/mainStyle.css">
+
 </head>
 <body>
 
-  <h1 id="alias">Alias:</h1>
+  <div class="background">
+
+      <div class="Lights">
+          <img id="Light1" src="./media/LightPoints1.png" alt="">
+          <img id="Light2" src="./media/Light1.png" alt="">
+          <img id="Light3" src="./media/LightPoints2.png" alt="">
+      </div>
+
+      <h1 id="alias">Alias:</h1>
   <h2 id="puntuacion">Puntuación: 0</h2>
   <h3 id="time">Tiempo transcurrido: 0 segundos</h3>
 
@@ -45,6 +55,15 @@
     </div>
 
     <button onclick="comeback()">Salir</button>
-<script src="js/game1.js"></script>
+
+
+    <button id="imageButton" onclick="changeImage()">
+      <img id="buttonImage" src="./media/mute.png" alt="Botón">
+    </button>
+      
+  </div>
+
+  <script src="js/game1.js"></script>
+  <script src="js/mainJS.js"></script>
 </body>
 </html>
