--- a/alias.html
+++ b/alias.html
@@ -6,6 +6,9 @@
 <title>Alias y Puntos</title>
 <link rel="stylesheet" href="css/alias.css">
 <link rel="stylesheet" href="css/mainStyle.css">
+<style>
+    
+</style>
 </head>
 <body>
     <div class="background">
@@ -27,8 +30,8 @@
             <p id="alias-info"></p>
             <p id="puntos-info"></p>
             <p id="mejor-tiempo-info"></p>
-            <button onclick="volverAJugar()">Volver a jugar</button>
-            <button onclick="volver()">Regresar</button>
+            <button class="jungle-theme" onclick="volverAJugar()">Volver a jugar</button>
+            <button class="jungle-theme" onclick="volver()">Regresar</button>
         </div>
         
 
